software office address

--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -144,10 +144,16 @@
 
     <section class="topView" id="topSection">
             <div class="row">
-                <div class="col-md-3 text-center">
+                <div class="col-md-2 text-center">
                     <a href="https://maps.app.goo.gl/UzynwwU276cmS7su5" target="_blank">
                         <img src="{% static 'social_media/location.png' %}" alt="Location">
-                        Goregaon, Mumbai
+                        Head Office
+                    </a>
+                </div>
+                <div class="col-md-3 text-center">
+                    <a href="https://maps.app.goo.gl/2ksSuAw7aFgwZac2A" target="_blank">
+                        <img src="{% static 'social_media/location.png' %}" alt="Location">
+                        Software Development Center
                     </a>
                 </div>
                 <div class="col-md-3 text-center">
@@ -156,14 +162,14 @@
                         technowinitinfra@gmail.com
                     </a>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-2 text-center">
                     <a href="tel:+917738019120" target="_blank">
                         <img src="{% static 'social_media/call_icon.png' %}" alt="Call">
                         +91 7738019120
                     </a>
                 </div>
 
-                <div class="col-md-3 text-center">
+                <div class="col-md-2 text-center">
                     <a href="{% url 'siteMap' %}">
                         <img src="{% static 'social_media/site_map.png' %}" alt="Site Map">
                        Site Map
