email error solved

--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -348,7 +348,7 @@
                             placeholder="Enter your email address" 
                             required 
                             title="Please enter a valid email address (max 2 dots allowed)"
-                            oninput="validateEmail(this)" 
+                            onchange="validateEmail(this)" 
                             maxlength="50">
                     </div>
                     
