--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -151,11 +151,12 @@
                     </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="https://maps.app.goo.gl/2ksSuAw7aFgwZac2A" target="_blank">
-                        <img src="{% static 'social_media/location.png' %}" alt="Location">
-                        Software Development Center
+                    <a href="https://maps.app.goo.gl/2ksSuAw7aFgwZac2A" target="_blank" title="Gala No 5, Udhog Bhavan">
+                      <img src="{% static 'social_media/location.png' %}" alt="Location">
+                      Software Development Center
                     </a>
-                </div>
+                  </div>
+                  
                 <div class="col-md-3 text-center">
                     <a href="mailto:technowinitinfra@gmail.com" target="_blank">
                         <img src="{% static 'social_media/gmail.png' %}" alt="Email">
