--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -1101,7 +1101,7 @@
                         placeholder="Enter your email address" 
                         required 
                         title="Please enter a valid email address (max 3 dots allowed)" 
-                        oninput="validateEmail(this)" 
+                        onchange="validateEmail(this)" 
                         maxlength="50">
                 </div>
     
