--- a/Template/Home/product.html
+++ b/Template/Home/product.html
@@ -42,84 +42,89 @@
   <body>
     
     <section class="project-card-container">
-        <div class="project-card" id="product-1">
-          <h2 class="project-title">Attendance Leave and Payroll</h2>
-          <div class="project-video">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/rL5B9v2VgBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <div class="project-description">
-           
-          </div>
-          <a href="{% static 'product/payroll_product.pdf' %}" class="download-btn" download>
-            <i class="fas fa-download"></i> Download PDF
-          </a>
+      <div class="project-card" id="product-1">
+        <h2 class="project-title">Attendance Leave and Payroll</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/payroll_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
+        <a href="{% static 'product/payroll_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
       
-        <div class="project-card" id="product-2">
-          <h2 class="project-title">Employee Self Service Website</h2>
-          <div class="project-video">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/iptIxxT9n9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <div class="project-description">
+      <div class="project-card" id="product-2">
+        <h2 class="project-title">Employee Self Service Website</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/ess_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/ess_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
       
+      <div class="project-card" id="product-3">
+        <h2 class="project-title">Student Attendance Capture for College</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/student_attendance_capture.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
-          <a href="{% static 'product/ess_product.pdf' %}" class="download-btn" download>
-            <i class="fas fa-download"></i> Download PDF
-          </a>
+        <a href="{% static 'product/student_attendance_capture.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+
+      <div class="project-card" id="product-4">
+        <h2 class="project-title">Chatbot Desktop App</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/chatbot_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
-
-        <div class="project-card" id="product-3">
-            <h2 class="project-title">Student Attendance Capture for College</h2>
-            <div class="project-video">
-              <iframe width="400" height="350" src="https://www.youtube.com/embed/poX_6g2R5b0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
-            <div class="project-description">
-            
-            </div>
-            <a href="{% static 'product/student_attendance_capture.pdf' %}" class="download-btn" download>
-                <i class="fas fa-download"></i> Download PDF
-              </a>
-          </div>
-
-          <div class="project-card" id="product-4">
-            <h2 class="project-title">Chatbot Desktop App</h2>
-            <div class="project-video">
-              <iframe width="400" height="350" src="https://www.youtube.com/embed/ZC7OXqox8jQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="project-description">
-             
-            </div>
-            <a href="{% static 'product/chatbot_product.pdf' %}" class="download-btn" download>
-                <i class="fas fa-download"></i> Download PDF
-              </a>
-          </div>
-
-          <div class="project-card" id="product-5">
-            <h2 class="project-title">Employee Self Service App</h2>
-            <div class="project-video">
-              <iframe width="400" height="350" src="https://www.youtube.com/embed/YB2qNrdBu5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="project-description">
-             
-            </div>
-            <a href="{% static 'product/ess_app_product.pdf' %}" class="download-btn" download>
-                <i class="fas fa-download"></i> Download PDF
-              </a>
-          </div>
-
-          <div class="project-card" id="product-6">
-            <h2 class="project-title">Document Managment System (DMS)</h2>
-            <div class="project-video">
-              <iframe width="400" height="350" src="https://www.youtube.com/embed/-HMlJQfmGQA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="project-description">
-             
-            </div>
-            <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
-                <i class="fas fa-download"></i> Download PDF
-              </a>
-          </div>
+        <a href="{% static 'product/chatbot_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+    
+      <div class="project-card" id="product-5">
+        <h2 class="project-title">Employee Self Service App</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/ess_app_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/ess_app_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+    
+      <div class="project-card" id="product-6">
+        <h2 class="project-title">Workosphere - Document Managment System (DMS) & Workflow</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/dms_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
       </section>
       
     
