--- a/Template/Home/blogs_index.html
+++ b/Template/Home/blogs_index.html
@@ -43,6 +43,7 @@
 
 
     <section class="blog-section" id="blog-1">
+        
         <!-- Blog Post 1 -->
         <div id="current-blog" class="heading-blog">
             <h2><u>Creation of a Workflow Management System: A Case Study</u></h2>
@@ -355,6 +356,54 @@
             </a>
             
 
+        </div>
+    </section>
+    
+    
+    <section class="download-section">
+        <!-- Section Title -->
+        <h2 class="section-heading">Other Resources</h2>
+    
+        <!-- Card Row -->
+        <div class="download-row">
+            <!-- Card 1 -->
+            <div class="download-container">
+                <h3 class="download-title">Google Analytics & SEO</h3>
+                <div class="download-image">
+                    <img src="{% static 'resources/google_analytics_seo.gif' %}" alt="resources1">
+                </div>
+                <div class="download-button-wrapper">
+                    <a href="{% static 'resources/google_seo.pdf' %}" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download PDF
+                    </a>
+                </div>
+            </div>
+    
+            <!-- Card 2 -->
+            <div class="download-container">
+                <h3 class="download-title">Designing with Canva</h3>
+                <div class="download-image">
+                    <img src="{% static 'resources/Canva.gif' %}" alt="Workflow Management Banner">
+                </div>
+                <div class="download-button-wrapper">
+                    <a href="{% static 'resources/canva.pdf' %}" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download PDF
+                    </a>
+                </div>
+            </div>
+    
+            <!-- Card 3 -->
+            <div class="download-container">
+                <h3 class="download-title">Complete Data Management with Value-Added Features</h3>
+                <div class="download-image">
+                    <img src="{% static 'resources/data.gif' %}" alt="Workflow Management Banner">
+                </div>
+                <div class="download-button-wrapper">
+                    <a href="{% static 'blog/workflow/case_study.pdf' %}" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download PDF
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
     
