--- a/Template/Home/product.html
+++ b/Template/Home/product.html
@@ -42,8 +42,38 @@
   <body>
     
     <section class="project-card-container">
+
       <div class="project-card" id="product-1">
-        <h2 class="project-title">Attendance Leave and Payroll</h2>
+        <h2 class="project-title">Webcrate – Dynamic, SEO-Friendly Websites </h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/Webcrate.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/Webcrate.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+
+
+<div class="project-card" id="product-2">
+        <h2 class="project-title">Workosphere </h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/workosphere.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+
+      <div class="project-card" id="product-3">
+        <h2 class="project-title">HRMS payroll</h2>
         
         <div class="project-video">
           <video controls>
@@ -56,40 +86,13 @@
         </a>
       </div>
       
-      <div class="project-card" id="product-2">
-        <h2 class="project-title">Employee Self Service Website</h2>
-        
-        <div class="project-video">
-          <video controls>
-            <source src="{% static 'product/ess_product.mp4' %}" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <a href="{% static 'product/ess_product.pdf' %}" class="download-btn" download>
-          <i class="fas fa-download"></i> Download PDF
-        </a>
-      </div>
-      
-      <div class="project-card" id="product-3">
-        <h2 class="project-title">Student Attendance Capture for College</h2>
-        
-        <div class="project-video">
-          <video controls>
-            <source src="{% static 'product/student_attendance_capture.mp4' %}" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <a href="{% static 'product/student_attendance_capture.pdf' %}" class="download-btn" download>
-          <i class="fas fa-download"></i> Download PDF
-        </a>
-      </div>
-
+     
       <div class="project-card" id="product-4">
-        <h2 class="project-title">Chatbot Desktop App</h2>
+        <h2 class="project-title">Audit</h2>
         
         <div class="project-video">
           <video controls>
-            <source src="{% static 'product/chatbot_product.mp4' %}" type="video/mp4">
+            <source src="{% static 'product/compliance_audit_project.mp4' %}" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -99,6 +102,20 @@
       </div>
     
       <div class="project-card" id="product-5">
+        <h2 class="project-title">Document Managment System (DMS) & Workflow</h2>
+        
+        <div class="project-video">
+          <video controls>
+            <source src="{% static 'product/dms_product.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
+          <i class="fas fa-download"></i> Download PDF
+        </a>
+      </div>
+    
+      <div class="project-card" id="product-6">
         <h2 class="project-title">Employee Self Service App</h2>
         
         <div class="project-video">
@@ -111,20 +128,7 @@
           <i class="fas fa-download"></i> Download PDF
         </a>
       </div>
-    
-      <div class="project-card" id="product-6">
-        <h2 class="project-title">Workosphere - Document Managment System (DMS) & Workflow</h2>
-        
-        <div class="project-video">
-          <video controls>
-            <source src="{% static 'product/dms_product.mp4' %}" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
-          <i class="fas fa-download"></i> Download PDF
-        </a>
-      </div>
+      
       </section>
       
     
