--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -93,7 +93,7 @@
         </div>
      
     
-        <br /><br />
+        <br>
     
         <!-- Supply of Manpower Section -->
         <div class="service-2" id="manpower-service">
@@ -116,7 +116,7 @@
           </div>
         </div>
     
-        <br /><br />
+        <br>
     
         <!-- Hardware Supply Section -->
         <div class="service-3" id="hardware-service">
@@ -138,7 +138,7 @@
           </div>
         </div>
     
-        <br />
+        <br>
     
         <!-- Digitalization of Documents Section -->
         <div class="service-4" id="digitalization-service">
@@ -162,7 +162,7 @@
           </div>
         </div>
     
-        <br />
+        <br>
     
         <!-- Hardware AMC Section -->
         <div class="service-5" id="hardware-amc-service">
@@ -187,7 +187,7 @@
             </div>
           </div>
         </div>
-
+        <br>
          <!-- Hardware AMC Section -->
          <div class="service-5" id="ai-service">
           <div class="row"> 
@@ -202,6 +202,23 @@
             <div class="col-md-6">
               <div class="card card-image">
                 <img src="{% static 'images/ai_solutions_service.gif' %}" alt="Hardware AMC" class="card-img" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="service-5" id="seo-google-service">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/seo_google_service.png' %}" alt="Hardware AMC" class="card-img" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>Boost Your Website with Our Full Web Development Package</u></h3><br>
+                <p class="card-description">
+                  Get more than just a website! With our full web development package, you’ll receive a complete online solution — including SEO optimization, Google Analytics integration, performance tuning, and more. We don’t just build your site; we help it grow, rank, and perform. Take the full package and enjoy added features that drive traffic and boost your online presence.</p>
               </div>
             </div>
           </div>
