--- a/Template/Home/blogs_index.html
+++ b/Template/Home/blogs_index.html
@@ -360,7 +360,7 @@
     </section>
     
     
-    <section class="download-section">
+    {% comment %} <section class="download-section">
         <!-- Section Title -->
         <h2 class="section-heading">Other Resources</h2>
     
@@ -405,7 +405,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
     
     
     
