--- a/Template/Home/product.html
+++ b/Template/Home/product.html
@@ -67,7 +67,7 @@
             Your browser does not support the video tag.
           </video>
         </div>
-        <a href="{% static 'product/dms_product.pdf' %}" class="download-btn" download>
+        <a href="{% static 'product/workosphere.pdf' %}" class="download-btn" download>
           <i class="fas fa-download"></i> Download PDF
         </a>
       </div>
@@ -96,7 +96,7 @@
             Your browser does not support the video tag.
           </video>
         </div>
-        <a href="{% static 'product/chatbot_product.pdf' %}" class="download-btn" download>
+        <a href="{% static 'product/compliance_audit_project.pdf' %}" class="download-btn" download>
           <i class="fas fa-download"></i> Download PDF
         </a>
       </div>
